@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 5.6
+Version: 5.7
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -223,12 +223,13 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* PAGE */
 .page-title {margin:0 0 20px;}
+.blog-page-text {clear:both; margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
 .pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
 
 
 /* POST */
-.post-list {width:100%; clear:both; float:left;}
+.post-list {width:100%; clear:both; float:left; margin:0 0 20px; border-bottom:1px solid #eee;}
 .post-single {width:100%; clear:both; float:left;}
 .post-title {margin:0 0 20px;}
 .post-title a:hover {color:#333; text-decoration:none;}
@@ -236,7 +237,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 .entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
 .sticky-title {margin:10px 0 20px; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; text-align:center;}
 .postmetadata {clear:both; margin:0 0 20px; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
-.more {width:100%; clear:both; float:left; margin:0 0 20px; padding:0 0 20px; border-bottom:1px solid #eee;}
+.more {width:100%; clear:both; float:left; padding:0 0 20px;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
 a.readmore:hover {background:#333; text-decoration:none;}
 
